--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "@whiskeysockets/baileys": "6.5.0",
         "cache-manager": "5.2.4",
         "colors": "^1.4.0",
+        "jest-mock": "^29.7.0",
         "mime-types": "2.1.35",
         "wa-sticker-formatter": "4.4.4"
     },
